--- a/projects/ngrx-test/src/app/app.component.html
+++ b/projects/ngrx-test/src/app/app.component.html
@@ -1,2 +1,4 @@
-<p-progressSpinner *ngIf="loading$ | async" />
+@if(loading$ | async){
+    <p-progressSpinner />
+}
 <router-outlet></router-outlet>
