--- a/projects/ngrx-test/src/app/list/list.component.html
+++ b/projects/ngrx-test/src/app/list/list.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="(list$ | async) as list;else loadingTemplate">
+@if(list$ | async; as list){
     <p-table [value]="list" [tableStyle]="{ 'min-width': '50rem' }">
         <ng-template pTemplate="header">
             <tr>
@@ -22,8 +22,6 @@
             </tr>
         </ng-template>
     </p-table>
-</ng-container>
-
-<ng-template #loadingTemplate>
+} @else {
     <p-progressSpinner />
-</ng-template>
+}
