--- a/projects/ngrx-test/src/styles.scss
+++ b/projects/ngrx-test/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-@import "primeicons/primeicons.css";
-@import "./assets/scss/bootstrap-reboot.scss";
-@import "./assets/scss/font-initialize.scss";
+@use "primeicons/primeicons.css";
+@use "./assets/scss/bootstrap-reboot.scss";
+@use "./assets/scss/font-initialize.scss";
 // --------------------------------
 .invalid-feedback {
   display: none;
@@ -30,4 +30,33 @@ p-progressSpinner {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+// --------------------------------
+app-register, app-login {
+    .p-password, .p-inputtext {
+      width: 100%;
+    }
+    .p-button, p-button {
+      width: 100%;
+      justify-content: center;
+      border-radius: 5px;
+    }
+    .p-button-label{
+      flex-grow: 0;
+    }
+    .component-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+    }
+    .form-container {
+      width: 300px;
+      border: 1px solid #c9c9c9;
+      padding: 16px;
+      border-radius: 10px;
+    }
+    .form-field {
+      margin-bottom: 16px;
+    }
 }
