--- a/projects/ngrx-test/src/app/list/list.component.html
+++ b/projects/ngrx-test/src/app/list/list.component.html
@@ -1,27 +1,56 @@
 @if(list$ | async; as list){
-    <p-table [value]="list" [tableStyle]="{ 'min-width': '50rem' }">
-        <ng-template pTemplate="header">
-            <tr>
-                <th>created at</th>
-                <th>created by</th>
-                <th>division name</th>
-                <th>tax description</th>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-tax>
-            <tr>
-                <td>{{ tax.created_at }}</td>
-                <td>{{ tax.created_by }}</td>
-                <td>{{ tax.division_name }}</td>
-                <td>{{ tax.tax_description }}</td>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="emptymessage">
-            <tr>
-                <td colspan="4">Table is empty!</td>
-            </tr>
-        </ng-template>
-    </p-table>
+<div class="toolbar">
+    <p-button type="button" label="Add Item" styleClass="p-button-sm" (onClick)="visible = !visible; AddORUpdateState = 1" />
+</div>
+<p-table [value]="list" [tableStyle]="{ 'min-width': '50rem' }">
+    <ng-template pTemplate="header">
+        <tr>
+            <th>created_by</th>
+            <th>division_name</th>
+            <th>uom</th>
+            <th>uom_description</th>
+            <th>id</th>
+            <th>division_id</th>
+            <th>operation</th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-uom>
+        <tr>
+            <td>{{ uom.created_by }}</td>
+            <td>{{ uom.division_name }}</td>
+            <td>{{ uom.uom }}</td>
+            <td>{{ uom.uom_description }}</td>
+            <td>{{ uom.id }}</td>
+            <td>{{ uom.division_id }}</td>
+            <td>
+                <p-button type="button" label="Remove Item" styleClass="p-button-sm" (onClick)="removeItem(uom.id)" />
+                <p-button type="button" label="Update Item" styleClass="p-button-sm" (onClick)="visible = !visible; AddORUpdateState = 2" />
+            </td>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="emptymessage">
+        <tr>
+            <td colspan="4">Table is empty!</td>
+        </tr>
+    </ng-template>
+</p-table>
 } @else {
-    <p-progressSpinner />
+<p-progressSpinner />
 }
+
+<p-dialog header="Add Item" [(visible)]="visible" [modal]="true" [style]="{ width: '50rem' }" [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }">
+    <div class="form-container">
+        <form #form="ngForm" [formGroup]="formGroup" (ngSubmit)="submit($event)" autocomplete="off">
+            <div class="form-field">
+                <label class="form-label">Description</label>
+                <input type="text" autocomplete="off" pInputText formControlName="description">
+                <small class="invalid-feedback">
+                    This field is required
+                </small>
+            </div>
+        </form>
+    </div>
+    <ng-template pTemplate="footer">
+        <p-button icon="pi pi-check" label="Submit" (onClick)="form.ngSubmit.emit(AddORUpdateState)" [disabled]="this.formGroup.invalid || this.dialogSubmitButtonLoading" [loading]="dialogSubmitButtonLoading" />
+    </ng-template>
+</p-dialog>
