feat: toast added

--- a/projects/ngrx-test/src/app/list/list.component.html
+++ b/projects/ngrx-test/src/app/list/list.component.html
@@ -54,3 +54,5 @@
         <p-button icon="pi pi-check" label="Submit" (onClick)="form.ngSubmit.emit(AddORUpdateState)" [disabled]="this.formGroup.invalid || this.dialogSubmitButtonLoading" [loading]="dialogSubmitButtonLoading" />
     </ng-template>
 </p-dialog>
+
+<p-toast></p-toast>
